; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_ecpg_result_by_descriptor.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_ecpg_result_by_descriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.descriptor = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i8*)* @ecpg_result_by_descriptor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ecpg_result_by_descriptor(i32 %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.descriptor*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = call %struct.descriptor* @ecpg_find_desc(i32 %7, i8* %8)
  store %struct.descriptor* %9, %struct.descriptor** %6, align 8
  %10 = load %struct.descriptor*, %struct.descriptor** %6, align 8
  %11 = icmp eq %struct.descriptor* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.descriptor*, %struct.descriptor** %6, align 8
  %15 = getelementptr inbounds %struct.descriptor, %struct.descriptor* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %13, %12
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local %struct.descriptor* @ecpg_find_desc(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
